GetCrewTemperature Print for PDF

--- a/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
+++ b/TM.RestHour/Views/CrewHealth/DailyTemperatureReading.cshtml
@@ -166,8 +166,8 @@
                             </div>
                             <select name="temperature" class="form-control m-b" style="width:15%" id="ddlUnit">
                                 <option value="">Select</option>
-                                <option value="Centigrade">Centigrade</option>
-                                <option value="Fahrenheit">Fahrenheit</option>
+                                <option value="°C">Centigrade(°C)</option>
+                                <option value="°F">Fahrenheit(°F)</option>
                             </select>
                         </div>
 
@@ -189,7 +189,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Remakrs</label>
+                        <label class="col-sm-2 control-label">Remarks</label>
 
 
                         <div class="row">
